feat(aot): package protocol interfaces and verify the jar loads
A lib that AOT-compiles against a host protocol resolved only at runtime
ships a jar whose classes reference an interface nobody packages, so the
namespace fails to load at the consumer. :aot/package-protocols names
those protocols: their namespaces join the compile set and the generated
interface .class files are copied in by exact path, which stays inside
the own-classes-only rule rather than widening the prefix filter.

:step/verify-load then boots the finished jar in a fresh JVM carrying
only the jar plus its POM dependency basis — no local.deps.edn overlay —
and requires every packaged namespace. A missing foreign class now fails
the build instead of the consumer.